[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/main.gd" type="Script" id=2]
[ext_resource path="res://scene/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://scene/pause_menu/pauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://dialogues/start_level_one.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/lvl2.tscn" type="PackedScene" id=6]

[node name="Node2D" type="Node2D"]
scale = Vector2( 1, 0.995697 )
script = ExtResource( 2 )

[node name="Viewports" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="Viewports/ViewportContainer1"]
size = Vector2( 510, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport1"]
offset = Vector2( -120, -50 )
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="Node2D" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 6 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="Viewports/ViewportContainer2"]
size = Vector2( 510, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer2/Viewport2"]
offset = Vector2( 100, -10 )
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="Node2D" parent="Viewports/ViewportContainer2/Viewport2" instance=ExtResource( 6 )]

[node name="Node2D" parent="." instance=ExtResource( 5 )]

[node name="pauseMenu" parent="." instance=ExtResource( 4 )]
anchor_bottom = 0.0
margin_left = 313.0
margin_top = 101.0
margin_right = 710.0
margin_bottom = 483.0
rect_scale = Vector2( 1, 0.994365 )
